--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -12,7 +12,7 @@ jobs:
           path: flathub
       - uses: actions/checkout@v4
         with:
-          repository: swsnr/turnon
+          repository: https://codeberg.org/swsnr/turnon.git
           path: upstream
           sparse-checkout: |
             flatpak/
@@ -25,7 +25,7 @@ jobs:
           delete-branch: true
           base: master
           sign-commits: true
-          title: Update manifest from swsnr/turnon
+          title: Update manifest from upstream
           body: |
-            Manually triggered update from swsnr/turnon
+            Manually triggered update from https://codeberg.org/swsnr/turnon
           assignees: swsnr
